CMAKE_MINIMUM_REQUIRED(VERSION 2.8.7 FATAL_ERROR)

# package information
SET(PACKAGE_NAME      "pie")
SET(PACKAGE_VERSION   "0.0.1-dev")
SET(PACKAGE_STRING    "${PACKAGE_NAME} ${PACKAGE_VERSION}")
SET(PACKAGE_TARNAME   "${PACKAGE_NAME}-${PACKAGE_VERSION}")
SET(PACKAGE_BUGREPORT "https://github.com/pie-lang/pie/issues")

PROJECT(${PACKAGE_NAME} C CXX ASM)

MARK_AS_ADVANCED(CLEAR CMAKE_INSTALL_PREFIX)
IF(APPLE)
  MARK_AS_ADVANCED(CMAKE_OSX_ARCHITECTURES
    CMAKE_OSX_DEPLOYMENT_TARGET
    CMAKE_OSX_SYSROOT)
ENDIF()

set(PIE_LINK_LIBRARIES pie_compiler pie_runtime)

INCLUDE_DIRECTORIES("${CMAKE_CURRENT_SOURCE_DIR}")

ADD_SUBDIRECTORY(compiler)
ADD_SUBDIRECTORY(runtime)
ADD_SUBDIRECTORY(vendor)
ADD_SUBDIRECTORY(main)

INCLUDE(GNUInstallDirs)
