

# I may not want it anytime. let it for now
FIND_PACKAGE(FLEX REQUIRED)
FIND_PACKAGE(BISON REQUIRED)

IF(FLEX_FOUND)
	FLEX_TARGET(Scanner lexer.ll ${CMAKE_CURRENT_SOURCE_DIR}/lexer.yy.cpp COMPILE_FLAGS "-f -R")
	BISON_TARGET(Parser parser.y ${CMAKE_CURRENT_SOURCE_DIR}/parser.tab.cpp)
ENDIF(FLEX_FOUND)

AUX_SOURCE_DIRECTORY("${CMAKE_CURRENT_SOURCE_DIR}" SOURCES)

list(APPEND SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/lexer.yy.cpp)
list(APPEND SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/parser.tab.cpp)

add_library(pie_compiler STATIC ${SOURCES})
